added picture to repo. updated style css sheet, made changes to homepage, about page and team page

--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
+                            <a href="moji_world.html" class="btn_1 d-none d-sm-block">Play Now</a>
                         </nav>
                     </div>
                 </div>
@@ -97,44 +97,44 @@
                 </div>
             </div>
         </section>
-        <!-- breadcrumb start-->
-
-        <!--::client logo part end::-->
-
-        <!--::client logo part end::-->
+        <!-- breadcrumb end-->
 
         <!-- use sasu part end-->
-        <section style="padding-left: 10%; padding-right: 10%;">
+        <section class="team">
             <div>
                 <ul>
                     <li>
                         <div>
-                            <div>
-                                <div class="team">
-                                    <h2>Chuck</h2>
-                                    <h3>Lead Developer | Software Engineer</h3>
-                                </div>
-                                <div class="team">
-                                    <img src="pictures/Chuck (Animated).png">
-                                    <p style="margin-left: 25%; margin-right: 25%;">
-                                        Raised in Chicago, Illinois Chuck is very creative, passionate game developer who came up
-                                         with the company's name, "Munnuo". He leads the team with pride.
-                                    </p>
-                                </div>
+                            <div class="team">
+                                <h1>Chuck</h1>
+                                <h4>Lead Developer | Software Engineer</h4>
+                            </div>
+                            <div class="team">
+                                <img src="pictures/Chuck (Animated).png">
+                                <p>
+                                    Raised in Chicago, Illinois Chuck is a very creative, passionate game developer who came up
+                                    with the company's name, "Munnuo". He leads the team with pride.
+                                </p>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <div class="team">
-                            <div class="section_tittle text-center">
-                                <h2>JuJu Beatz</h2>
-                                <h3>Audio Engineer | Music Producer</h3>
+                        <div>
+                            <div class="team">
+                                <h1>JuJu Beatz</h1>
+                                <h4>Audio Engineer | Music Producer</h4>
+                            </div>
+                            <div class="team">
+                                <img src="pictures/JuJu Beatz.png">
+                                <p>
+                                    Also born and raised in Chicago, JuJu is a hard-working, talented music producer.
+                                    Her contributions to the studio range from engineering music to designing website art style.
+                                </p>
                             </div>
                         </div>
 
                     </li>
-                </ul>
-                
+                </ul>   
             </div>
                   
         </section>
