updated play now link on multiple pages

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                 </li>
               </ul>
             </div>
-            <a href="#" class="btn_1 d-none d-sm-block">Play Now</a>
+            <a href="moji_world.html" class="btn_1 d-none d-sm-block">Play Now</a>
           </nav>
         </div>
       </div>
