--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zxx">
 
 <head>
@@ -44,7 +44,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body class="body_bg">
     <div class="body_bg">
         <!--::header part start::-->
         <header class="main_menu single_page_menu"  style="padding-left: 15%; padding-right: 15%;">
@@ -85,17 +85,7 @@
 
         <!-- banner part start-->
         <section class="banner_part">
-            <div class="container" style="padding-left: 10%; padding-right: 10%;">
-                <div class="row align-items-center justify-content-between">
-                    <div class="col-lg-6 col-md-8">
-                        <div class="banner_text">
-                            <div class="banner_text_iner">
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </section>
         <!-- banner part start-->
 
@@ -149,7 +139,7 @@
         <!-- pricing part end-->
         <br>
         <br>
-    <section style="padding-top: 5%;">
+    <section style="padding-top: 5%; padding-bottom: 0%;">
         <!--::footer_part start::-->
         <footer class="footer_part">
             <div class="footer_top" style="padding-left: 10%; padding-right: 10%;">
@@ -215,19 +205,6 @@
                                 </P>
                             </div>
                         </div>
-                        <!---
-                        <div class="col-lg-4">
-                            <div class="footer_icon social_icon">
-                                <ul class="list-unstyled">
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a>
-                                    </li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        -->
                     </div>
                 </div>
             </div>
@@ -235,8 +212,6 @@
     </section>
         <!--::footer_part end::-->
 </div>
-
-
     <!-- jquery plugins here-->
     <script src="js/jquery-1.12.1.min.js"></script>
     <!-- popper js -->
@@ -264,5 +239,4 @@
     <!-- custom js -->
     <script src="js/custom.js"></script>
 </body>
-
 </html>
