updated games page, moji world page, and style sheet

--- a/games.html
+++ b/games.html
@@ -109,7 +109,7 @@
 
         <!-- gallery_part part start-->
         <section class="gallery_bg">
-            <div class="container" style="margin: 5%;">
+            <div class="container">
                 <div class="gallery">
                     <a target="_self" href="Da_Streetz.html">
                     <img src="pictures/Da_Streetz_poster_art.png" alt="Image">
@@ -123,11 +123,6 @@
                 <div class="gallery">
                     <a target="_self" href="#">
                     <img src="pictures/moji_mobile_poster_art.png" alt="Image">
-                    </a>
-                </div>
-                <div class="gallery">
-                    <a target="_self" href="https://play.google.com/store/apps/details?id=com.MUNNUO.ShapeCatcher&hl=en_NZ&pli=1">
-                    <img src="pictures/shape_catcher_icon.png" alt="Image">
                     </a>
                 </div>
 <!--- use this block of code to add more games to the catalog
