updated team page, made update to stylesheets

--- a/team.html
+++ b/team.html
@@ -121,7 +121,7 @@
                     <li>
                         <div>
                             <div class="team">
-                                <h1>JuJu Beatz</h1>
+                                <h1>JuJu</h1>
                                 <h4>Audio Engineer | Music Producer</h4>
                             </div>
                             <div class="team">
