updated the streets page with new trailer. Also updated about page. Made a few adjustments to the styling on the style sheets

--- a/Da_Streetz.html
+++ b/Da_Streetz.html
@@ -27,10 +27,9 @@
   <section class="hero">
     <h1><img src="pictures/Da Streetz logo.png" alt="Da Streetz"></h1>
     <p>Enter the world of Da Streetz – Fight, Explore, Customize</p>
-    <a href=""><button class="btn">Watch Trailer</button></a>
+    <button class="btn" id="playButton">Watch Trailer</button>
     <div id="videoContainer" style="display: none;">
-      <iframe id="youtubeVideo" width="560" height="315" src="https://www.youtube.com/embed/79-2d2J89fg?si=d5lNvPOJs8yXHp0n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-      </iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/q9BRnt6AfSE?si=imhtkow7Bg25hDjF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <a href="https://drive.google.com/uc?export=download&id=1DWTUP-J_CLDZASh3ibcoYZxVtA8FTmXR&confirm=t"><button class="btn">Try Demo</button></a>
   </section>
