--- a/about.html
+++ b/about.html
@@ -99,9 +99,9 @@
   <!-- breadcrumb start-->
 
   <section id="about-us" style="font-family: Arial, sans-serif; max-width: 960px; margin: auto; padding: 2rem; line-height: 1.6; color: #222;">
-  <h1 style="font-size: 2.5rem; font-weight: bold; color: #111;">About Us</h1>
+
   <p>
-    <strong>Welcome to Da Streetz Studio</strong> – where the hustle is real and every pixel tells a story.
+    <strong>Welcome to Munnuo Games Studio</strong> – where the hustle is real and every pixel tells a story.
   </p>
   <p>
     We’re the creative force behind <em>Da Streetz</em>, a gritty, immersive fighting RPG where survival isn’t a choice—it’s a lifestyle. Born from our love of street culture, anime aesthetics, and high-energy combat mechanics, our studio is driven by one goal: 
@@ -112,7 +112,7 @@
   </p>
 
   <h2 style="margin-top: 2rem;">What We Stand For</h2>
-  <ul style="list-style-type: disc; margin-left: 2rem;">
+  <ul style="list-style-type: disc; margin-left: 2rem; color: white;">
     <li><strong>Street culture meets next-gen design</strong> – We honor the grind with cutting-edge visuals and systems.</li>
     <li><strong>Character and identity</strong> – Every fighter has a backstory, every street has a voice.</li>
     <li><strong>Creative control</strong> – From the move sets to your crib, we put customization front and center.</li>
@@ -122,7 +122,7 @@
   <h2 style="margin-top: 2rem;">Meet the Team</h2>
 
   <div style="margin-bottom: 1.5rem;">
-    <h3>🔥 Chuck “C-Tek” W. — <em>Creative Director / Founder</em></h3>
+    <h3>🔥 Chuck “C-Dog” W. — <em>Lead Developer / Founder</em></h3>
     <p>
       The visionary behind <em>Da Streetz</em>, Chuck blends street smarts with technical chops. With a background in animation and game systems design, he drives the look, feel, and soul of the game.
     </p>
@@ -130,29 +130,29 @@
   </div>
 
   <div style="margin-bottom: 1.5rem;">
-    <h3>🎮 Lex “L-Frame” T. — <em>Lead Developer</em></h3>
+    <h3>🎮 Rajhae “Flex” H. — <em>Voice Actor</em></h3>
     <p>
-      Lex brings the combat system to life with responsive controls, silky-smooth frame data, and combo depth. He ensures every fight feels legit using Unity's physics and Visual Studio’s debugging power.
+      Flex brings the characters to life with his unique dialog and voice recordings. He ensures every story-driven moment feels legit using his chrisma to play the part.
     </p>
-    <blockquote style="margin-left: 1rem; font-style: italic; color: #666;">"I code like I fight—tight timing, clean execution."</blockquote>
+    <blockquote style="margin-left: 1rem; font-style: italic; color: #666;">"What you n**** doing around our block?"</blockquote>
   </div>
 
   <div style="margin-bottom: 1.5rem;">
-    <h3>🎨 Rae “PixelRiot” M. — <em>Art Director</em></h3>
+    <h3>🎨 Petre “Okpetre” — <em>Music Producer</em></h3>
     <p>
-      Rae fuses anime-inspired detail with gritty realism. From character design to environments, she defines the bold visual identity of <em>Da Streetz</em>.
+      Petre drives the rhythm and mood of the game through his fierce musical soundtrack. From the club, to the lobby stores, and the intense combat scenes the mood is set through his musical prowess for <em>Da Streetz</em>.
     </p>
     <blockquote style="margin-left: 1rem; font-style: italic; color: #666;">"Our style isn’t soft. It’s sharp, loud, and proud."</blockquote>
   </div>
 
   <div style="margin-bottom: 1.5rem;">
-    <h3>🎧 Dez “SoundKilla” B. — <em>Audio Engineer</em></h3>
+    <h3>🎧 Jewel “JuJu Beats” C. — <em>Audio Engineer</em></h3>
     <p>
-      Dez creates the soundtrack of the streets—from gritty alley ambiance to knockout SFX. He layers beats and punches for maximum impact.
+      JuJu creates the soundtrack of the streets—from gritty alley ambiance to knockout SFX. She layers beats and punches for maximum impact.
     </p>
     <blockquote style="margin-left: 1rem; font-style: italic; color: #666;">"If you feel the bass drop when the round starts, I did my job."</blockquote>
   </div>
-
+<!----
   <div style="margin-bottom: 1.5rem;">
     <h3>📱 Mia “UXtra” V. — <em>UI/UX & Mobile Systems Lead</em></h3>
     <p>
@@ -160,7 +160,7 @@
     </p>
     <blockquote style="margin-left: 1rem; font-style: italic; color: #666;">"Simplicity is power. I design so players don’t have to think twice."</blockquote>
   </div>
-
+-->
   <h2 style="margin-top: 2rem;">Join the Movement</h2>
   <p>
     <em>Da Streetz</em> is more than a game. It’s a platform for expression, a space for players to define themselves, and a tribute to the grind that shapes us all.
@@ -168,14 +168,14 @@
   <p>
     Follow us, fight with us, and help shape the future of <em>Da Streetz</em>.
   </p>
-
+<!----
   <div style="margin-top: 1rem;">
     <a href="#" style="margin-right: 1rem; text-decoration: none;">Instagram</a>
     <a href="#" style="margin-right: 1rem; text-decoration: none;">Twitter / X</a>
     <a href="#" style="margin-right: 1rem; text-decoration: none;">Discord</a>
     <a href="#" style="text-decoration: none;">YouTube</a>
   </div>
-
+-->
   <p style="margin-top: 2rem; font-style: italic; color: #444;">
     The streets are watching. And we’re just getting started.
   </p>
